force-app/main/default/objects/ABSLI_IGMS_Document__c/ABSLI_IGMS_Document__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the IGMS File Details in IGMS to CRM Complaint Inbound API.</description>
    <label>ABSLI IGMS Document</label>
    <nameField>
        <displayFormat>IGMS-DOC-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABSLI IGMS Docuements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>