force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Attachment_Source__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Source__c</fullName>
    <description>This field to store the IGMS to Salesforce Source in IGMS to Salesforce Complaint Inbound API.</description>
    <label>Attachment Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>