force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This Field to store the Master Detail relation between Case and IGMS Document</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ABSLI IGMS Docuements</relationshipLabel>
    <relationshipName>ABSLI_IGMS_Docuements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>