force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <label>ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>