force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <description>This field to store the IGMS Document ID in IGMS to CRM Complaint Inbound API</description>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>