force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>This field to store the File Name (Doc Name) from IGMS to CRM in Complaint Inbound API</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>