force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/IRDA_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>IRDA_Token_Number__c</fullName>
    <description>This field to store the IRDA Token Number in IGMS to Salesforce Complaint Inbound API.</description>
    <label>IRDA Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>