force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Policy_No_Text__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_Text__c</fullName>
    <description>This field to store the Policy No coming from IGMS to Salesforce Complaint Inbound API.</description>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>