force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>52768</length>
    <type>LongTextArea</type>
</CustomField>