force-app/main/default/objects/ABSLI_IGMS_Document__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>52768</length>
    <type>LongTextArea</type>
</CustomField>