force-app/main/default/objects/ABSLI_IGMS_Document__c/recordTypes/Download.recordType-meta.xml
<RecordType>
    <fullName>Download</fullName>
    <active>true</active>
    <label>Download</label>
</RecordType>