force-app/main/default/objects/ABSLI_IGMS_Document__c/recordTypes/Upload.recordType-meta.xml
<RecordType>
    <fullName>Upload</fullName>
    <active>true</active>
    <label>Upload</label>
</RecordType>